--- a/hugo.yaml
+++ b/hugo.yaml
@@ -136,7 +136,7 @@ params:
     button:
       enable: true
       name: "Resume"
-      url: "#"
+      url: "https://1drv.ms/f/c/909c18bb2dd02227/Emo5lwWcccFGolA0_Tz-GxMB5SETTPuVLgvl5hXgUXXt7Q?e=0w6JGO"
       download: true
       newPage: false
     socialLinks:
