--- a/hugo.yaml
+++ b/hugo.yaml
@@ -155,7 +155,7 @@ params:
     title: "About Me"
     image: "/images/me2.jpg"
     content: |
-      Hi, I'm Théo ! I'm a 22 years old student in software engineering from France with a passion for 3D graphics and game engine development. **I am looking for an internship in the field of game engine development !**
+      Hi, I'm Théo ! I'm a 22 years old student in software engineering from France with a passion for 3D graphics and game engine development. **I am looking for a 6-month internship in the field of game engine development, starting July 2025 !**
       Currently in Québec studying at UQAC, I am in my last year of my master's degree at ESIR, with a major in video games and digital imaging.
       I enjoy various types of games, but I like challenges and good stories, and I hope I'll be able to work on a game that will impact people as much as other game impacted me.
     skills:
